--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - /gambero/tmp
       - /gambero/public/assets
     volumes:
-      - .:/gambero
+      - ..:/gambero
       - /data/log:/gambero/log
       - /data/sphinx:/sphinx
     security_opt:
