--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - SECRET_KEY_BASE
       - SMTP_USERNAME
       - SMTP_PASSWORD
+      - SENTRY_DSN
     # tmpfs's must be explicitly declared, because / is by default read-only (read_only: true).
     tmpfs:
       - /tmp
@@ -42,6 +43,7 @@ services:
       - MYSQL_DATABASE
       - MYSQL_USER
       - MYSQL_PASSWORD
+      - SENTRY_DSN
     security_opt:
       - no-new-privileges
     networks:
