--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -19,8 +19,8 @@ services:
       - /gambero/public/assets
     volumes:
       - ..:/gambero
-      - /data/log:/gambero/log
-      - /data/sphinx:/sphinx
+      - ${GAMBERO_PATH:-/data}/log:/gambero/log
+      - ${GAMBERO_PATH:-/data}/sphinx:/sphinx
     security_opt:
       - no-new-privileges
     read_only: true
@@ -35,7 +35,7 @@ services:
   db:
     image: mariadb
     volumes:
-      - /data/mariadb:/var/lib/mysql
+      - ${GAMBERO_PATH:-/data}/mariadb:/var/lib/mysql
     tmpfs:
       - /tmp
       - /run/mysqld
