--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,11 +1,9 @@
 version: '3.4'
 services:
   app:
-    image: gambero:latest
+    image: gambero
     depends_on:
       - db
-    ports:
-      - 8080:8080
     environment:
       - RAILS_ENV # One of "development", "test", "production"
       - SECRET_KEY_BASE
@@ -27,9 +25,10 @@ services:
       default:
         ipv4_address: 172.20.0.2
     healthcheck:
-      interval: 5m
+      interval: 30s
       retries: 3
       start_period: 30s
+
   db:
     image: mariadb
     volumes:
