--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 services:
   app:
-    image: gambero:latest
+    image: gambero
     depends_on:
       - db
     ports:
@@ -27,9 +27,10 @@ services:
       default:
         ipv4_address: 172.20.0.2
     healthcheck:
-      interval: 5m
+      interval: 30s
       retries: 3
       start_period: 30s
+
   db:
     image: mariadb
     volumes:
